data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureVillagePieces.House4Garden.md
---
title: "StructureVillagePieces.House4Garden"
description: "public static class StructureVillagePieces.House4Garden extends StructureVillagePieces.Village"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureVillagePieces.House4Garden.html"
sourceType: javadoc
---

# StructureVillagePieces.House4Garden

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.House4Garden

## Class signature

```java
public static class StructureVillagePieces.House4Garden extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `static StructureVillagePieces.House4Garden func_74912_a(StructureVillagePieces.Start p_74912_0_, java.util.List p_74912_1_, java.util.Random p_74912_2_, int p_74912_3_, int p_74912_4_, int p_74912_5_, int p_74912_6_, int p_74912_7_)`

## Fields

- `House4Garden`
- `House4Garden`
